HMAN-1131: Handle null not required field and update actual hearing day logic
Amended ActualHearingDay to replace generated setter method for 'not required' field with a custom one.  Custom setter sets the value of not required field to false if a null Boolean object is passed to it.

Added unit test class for ActualHearingDay.

Changed logic in HearingActualsValidator validateHearingActualDaysNotInTheFuture() method to only reject hearing days in the future that are not empty.  This should cover the HMAN-1075 requirement and keep validation of actual hearing days for today as they were prior to the HMAN-1075 changes.

Reworked validateHearingActualDaysNotInTheFuture() method tests in HearingActualsValidatorTest to cover changed logic.  Combined a number of tests into parameterised tests.

Changed hearingDate_Today_Outcome_NotEmpty_StartTime_Present_NotRequired_False() test in HearingActualsServiceTest in line with changed validateHearingActualDaysNotInTheFuture() logic.